added create recipe

--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cookingInstructions">Instructions</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
 </resources>
