--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">RecipEase</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
     <string name="action_settings">Settings</string>
     <string name="title_activity_browse_recipes">BrowseRecipesActivity</string>
     <string name="results">Results</string>
