Logo is so much better; Edit Search button works
Logo uses native text rather than a png file, to allow us to resize as needed without blurriness. Color has been corrected - idk who made it but it wasn't the right shade of blue lol.

I positioned the logo to create a uniform feel across all screens of the app.

Edit Search button now takes user back to ingredient selector.

App really feels a lot more polished than it did a couple days ago, with the navbar + all this

--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_create_recipe">CreateRecipeActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="textLogo">RecipEase&lt;</string>
 </resources>
