--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="close">Close</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_browse_recipes">BrowseRecipesActivity</string>
+    <string name="title_activity_browse_recipes">Recommended Recipes</string>
     <string name="results">Results</string>
 
     <string name="title">Title</string>
@@ -12,9 +12,15 @@
     <string name="cookTime">Cook Time</string>
     <string name="cookingIngredients">Ingredients</string>
     <string name="cookingInstructions">Instructions</string>
-    <string name="title_activity_home">HomeActivity</string>
-    <string name="title_activity_register">RegisterActivity</string>
-    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
-    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_activity_home">Home</string>
+    <string name="title_activity_register">Register</string>
+    <string name="title_activity_create_recipe">Create a Recipe</string>
+    <string name="title_activity_ingredient_selector">Ingredient Selector</string>
+    <string name="title_activity_about">About</string>
+    <string name="title_activity_personal_recipes">Personal Recipes</string>
+    <string name="title_activity_animation"></string>
+    <string name="title_activity_profile">Profile</string>
+    <string name="title_activity_recipe_details">Recipe Details</string>
+
     <string name="textLogo">RecipEase&lt;</string>
 </resources>
