--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="cookTime">Cook Time</string>
     <string name="cookingIngredients">Ingredients</string>
     <string name="cookingInstructions">Instructions</string>
+    <string name="Comments">Comments</string>
     <string name="title_activity_home">Home</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_create_recipe">Create a Recipe</string>
