--- a/RecipEase/app/src/main/res/values/strings.xml
+++ b/RecipEase/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_activity_register">Register</string>
     <string name="title_activity_create_recipe">Create a Recipe</string>
     <string name="title_activity_favorite_recipes">Favorites</string>
+    <string name="title_activity_trending">Trending</string>
     <string name="title_activity_ingredient_selector">Ingredient Selector</string>
     <string name="title_activity_about">About</string>
     <string name="title_activity_personal_recipes">Personal Recipes</string>
